:shirt: lint の設定を修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,18 +28,29 @@
    "settings": {
      "import/resolver": {
        "node": {
-         "extensions": [".js", ".jsx", ".ts", ".tsx"]
+         "extensions": [".js", ".jsx", ".ts", ".tsx", "json"]
        }
      }
    },
    "rules": {
      "@typescript-eslint/indent": ["error", 2],
      "@typescript-eslint/prefer-interface": "off",
+     "@typescript-eslint/explicit-module-boundary-types": "off",
+     "no-use-before-define": "off",
+     "no-param-reassign": "off",
+     "no-console": "off",
      "react/jsx-filename-extension": [
        "error",
        { "extensions": [".jsx", ".tsx"] }
      ],
      "react/prop-types": "off",
-     "spaced-comment": ["error", "always", { "markers": ["/ <reference"] }]
+     "spaced-comment": ["error", "always", { "markers": ["/ <reference"] }],
+     "import/extensions": ["error", "ignorePackages", {
+        "js": "never",
+        "mjs": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }]
    }
 }
