--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
      "@typescript-eslint/indent": ["error", 2],
      "@typescript-eslint/prefer-interface": "off",
      "@typescript-eslint/explicit-module-boundary-types": "off",
+     "react/require-default-props": "off",
      "import/prefer-default-export": "off",
      "no-use-before-define": "off",
      "no-param-reassign": "off",
