--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
    "settings": {
      "import/resolver": {
        "node": {
-         "extensions": [".js", ".jsx", ".ts", ".tsx", "json"]
+         "extensions": [".js", ".jsx", ".ts", ".tsx", ".d.ts", "json"]
        }
      }
    },
@@ -37,6 +37,7 @@
      "@typescript-eslint/prefer-interface": "off",
      "@typescript-eslint/explicit-module-boundary-types": "off",
      "react/require-default-props": "off",
+     "import/no-extraneous-dependencies": "off",
      "import/prefer-default-export": "off",
      "no-use-before-define": "off",
      "no-param-reassign": "off",
